--- a/app/src/main/res/layout/activity_main_balance.xml
+++ b/app/src/main/res/layout/activity_main_balance.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainBalance" >
+    tools:context=".Actividades.MainBalance" >
 
     <TextView
         android:id="@+id/textView"
@@ -66,7 +66,7 @@
     <LinearLayout
         android:id="@+id/linearLayout5"
         android:layout_width="180dp"
-        android:layout_height="250dp"
+        android:layout_height="270dp"
         android:layout_marginStart="16dp"
         android:background="#379392"
         android:orientation="vertical"
@@ -94,16 +94,24 @@
         <TextView
             android:id="@+id/txt_total_ingreso"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="$ 940"
             android:textAlignment="center"
             android:textSize="20sp"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/btn_detalles_ingresos"
+            android:layout_width="wrap_content"
+            android:layout_height="37dp"
+            android:layout_gravity="center"
+            android:text="Detalles"
+            android:textSize="12sp" />
+
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/textView5"
             android:layout_width="match_parent"
-            android:layout_height="49dp" />
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/btn_nuevo_ingreso"
@@ -112,12 +120,18 @@
             android:layout_centerInParent="false"
             android:layout_gravity="center"
             android:text="Nuevo Ingreso" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="match_parent"
+            android:layout_height="49dp" />
+
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout40"
         android:layout_width="180dp"
-        android:layout_height="250dp"
+        android:layout_height="270dp"
         android:layout_marginTop="64dp"
         android:background="#4F86C6"
         android:orientation="vertical"
@@ -147,17 +161,27 @@
         <TextView
             android:id="@+id/txt_total_gastos"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="41dp"
             android:text="$ 250"
             android:textAlignment="center"
             android:textColor="#9C0808"
             android:textSize="20sp"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/btn_detalles_gastos"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
+            android:text="Detalles"
+            android:textColorHighlight="#673AB7"
+            android:textColorLink="#673AB7"
+            android:textSize="12sp" />
+
         <TextView
-            android:id="@+id/textView15"
+            android:id="@+id/textView8"
             android:layout_width="match_parent"
-            android:layout_height="49dp" />
+            android:layout_height="wrap_content" />
 
         <Button
             android:id="@+id/btn_nuevo_gasto"
