--- a/app/src/main/res/layout/activity_registrar_ingresos.xml
+++ b/app/src/main/res/layout/activity_registrar_ingresos.xml
@@ -7,7 +7,7 @@
     tools:context=".Actividades.RegistrarIngresos">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="INGRESOS"
@@ -21,14 +21,14 @@
         app:layout_constraintVertical_bias="0.08" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linearLayout1"
         android:layout_width="331dp"
         android:layout_height="374dp"
         android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        app:layout_constraintTop_toBottomOf="@+id/textView10">
 
         <TextView
             android:id="@+id/textView4"
@@ -39,9 +39,9 @@
             android:textStyle="bold" />
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txt_monto_gasto"
+            android:id="@+id/txt_monto_ingreso"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="56dp"
             android:hint="$" />
 
         <TextView
@@ -83,9 +83,9 @@
                             android:layout_height="match_parent">
 
                             <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/txt_fecha_gasto"
+                                android:id="@+id/txt_fecha_ingreso"
                                 android:layout_width="match_parent"
-                                android:layout_height="42dp"
+                                android:layout_height="60dp"
                                 android:hint="día/mes/año" />
                         </com.google.android.material.textfield.TextInputLayout>
                     </LinearLayout>
@@ -108,9 +108,9 @@
                             android:layout_height="match_parent">
 
                             <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/txt_categoria_gasto"
+                                android:id="@+id/txt_categoria_ingreso"
                                 android:layout_width="match_parent"
-                                android:layout_height="42dp"
+                                android:layout_height="60dp"
                                 android:hint="categoría ingreso" />
                         </com.google.android.material.textfield.TextInputLayout>
                     </LinearLayout>
@@ -131,14 +131,15 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="72dp">
+                    android:layout_height="match_parent">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/txt_descripcion_gasto"
+                        android:id="@+id/txt_descripcion_ingreso"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Detalles" />
                 </com.google.android.material.textfield.TextInputLayout>
+
             </LinearLayout>
 
         </LinearLayout>
@@ -146,12 +147,21 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/btn_guardar_gasto"
+        android:id="@+id/btn_guardar_ingreso"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="52dp"
         android:text="GUARDAR"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout1"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="425dp"
+        android:layout_height="98dp"
+        android:layout_marginBottom="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView10"
+        app:srcCompat="@drawable/franja"
+        tools:layout_editor_absoluteX="-2dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
