--- a/app/src/main/res/layout/activity_main_balance.xml
+++ b/app/src/main/res/layout/activity_main_balance.xml
@@ -16,9 +16,10 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.066" />
+        app:layout_constraintVertical_bias="0.09" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -132,7 +133,7 @@
         android:id="@+id/linearLayout40"
         android:layout_width="180dp"
         android:layout_height="270dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="36dp"
         android:background="#4F86C6"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -191,4 +192,12 @@
             android:text="Nuevo Gasto"
             android:textAlignment="center" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="470dp"
+        android:layout_height="127dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:srcCompat="@drawable/franja"
+        tools:layout_editor_absoluteX="-29dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
