Detalle de movimientos, actualizacion de totales y registro de usuarios

--- a/app/src/main/res/layout/activity_main_balance.xml
+++ b/app/src/main/res/layout/activity_main_balance.xml
@@ -107,6 +107,7 @@
             android:layout_height="37dp"
             android:layout_gravity="center"
             android:text="Detalles"
+            android:textColorLink="#673AB7"
             android:textSize="12sp" />
 
         <TextView
