--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Actividades.Autenticar">
+    tools:context=".Actividades.Registro">
 
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="453dp"
         android:layout_height="115dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="52dp"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
         app:srcCompat="@drawable/franja"
         tools:layout_editor_absoluteX="-21dp" />
@@ -20,15 +20,15 @@
         android:id="@+id/imageView2"
         android:layout_width="424dp"
         android:layout_height="96dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
         app:srcCompat="@drawable/franja"
         tools:layout_editor_absoluteX="-7dp" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="333dp"
-        android:layout_height="396dp"
+        android:layout_width="340dp"
+        android:layout_height="479dp"
         android:layout_margin="16dp"
         android:layout_marginBottom="204dp"
         app:cardCornerRadius="16dp"
@@ -80,10 +80,10 @@
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/txt_correo"
-                    android:layout_width="296dp"
+                    android:layout_width="240dp"
                     android:layout_height="56dp"
                     android:hint="nombre de usuario"
-                    android:textSize="14sp" />
+                    android:textSize="16sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -100,19 +100,45 @@
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/txt_contrasenia"
-                android:layout_width="292dp"
-                android:layout_height="61dp"
-                android:layout_gravity="center"
-                android:ems="10"
-                android:gravity="center"
-                android:inputType="textPassword" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txt_contrasenia"
+                    android:layout_width="247dp"
+                    android:layout_height="56dp"
+                    android:hint="contraseña"
+                    android:textSize="16sp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <TextView
+                android:id="@+id/textView20"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/textView21"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nombre:"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"/>
+                android:gravity="center">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/txt_nombre"
+                    android:layout_width="247dp"
+                    android:layout_height="56dp"
+                    android:hint="nombre"
+                    android:textSize="16sp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
 
@@ -120,24 +146,13 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_registro"
         android:layout_width="149dp"
         android:layout_height="47dp"
-        android:layout_marginTop="48dp"
-        android:text="Ingresar"
+        android:layout_marginTop="20dp"
+        android:text="Crear cuenta"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
-    <Button
-        android:id="@+id/btn_ir_registro"
-        android:layout_width="149dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="48dp"
-        android:text="Registrarme"
-        app:layout_constraintEnd_toEndOf="@+id/cardView"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@+id/cardView"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
@@ -145,7 +160,7 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="8dp"
         android:text="MiDinero"
         android:textSize="34sp"
         android:textStyle="bold"
