--- a/app/src/main/res/layout/activity_detalle_ingresos.xml
+++ b/app/src/main/res/layout/activity_detalle_ingresos.xml
@@ -6,4 +6,27 @@
     android:layout_height="match_parent"
     tools:context=".Actividades.DetalleIngresos">
 
+    <TextView
+        android:id="@+id/txttest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Detalle de ingresos"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_lista_ingresos"
+        android:layout_width="346dp"
+        android:layout_height="515dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txttest" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
